updated 2030 with new copy

--- a/Themes/new/Styles/_variable-overrides.less
+++ b/Themes/new/Styles/_variable-overrides.less
@@ -77,7 +77,7 @@
 @btn-font-weight: normal;
 //--
 @btn-default-color: @gray-darker;
-@btn-default-bg: #fff;
+@btn-default-bg: transparent;
 @btn-default-border: @brand-primary;
 //--
 @btn-primary-color: #fff;
