changes for locations pages

--- a/Themes/new/Styles/_variable-overrides.less
+++ b/Themes/new/Styles/_variable-overrides.less
@@ -67,9 +67,9 @@
 @font-size-h1: floor(@font-size-base * 2); // 40px
 @font-size-h2: ceil(@font-size-base * 1.8); // 36px
 @font-size-h3: ceil(@font-size-base * 1.6); // 32px
-@font-size-h4: floor(@font-size-base * 1.5); // 30px
-@font-size-h5: floor(@font-size-base * 1.4); // 28px
-@font-size-h6: ceil(@font-size-base * 1.3); // 26px
+@font-size-h4: floor(@font-size-base * 1.4); // 28px
+@font-size-h5: floor(@font-size-base * 1.2); // 24px
+@font-size-h6: ceil(@font-size-base); // 20px
 @font-size-blockquote: ceil(@font-size-base * 1.6); // 32px
 @font-size-lead: floor(@font-size-base * 1.2); // 24px
 
@@ -119,14 +119,14 @@
 @btn-link-disabled-color: @gray-light;
 
 @spacer: 4px;
-@spacing-1: 2; // 8px
-@spacing-2: 4; // 16px
-@spacing-3: 6; // 24px
-@spacing-4: 8; // 32px
-@spacing-5: 10; // 40px
-@spacing-6: 12; // 64px
-@spacing-7: 24; // 96px
-@spacing-8: 36; // 128px
+@spacing-1: 1; // 4px
+@spacing-2: 2; // 8px
+@spacing-3: 4; // 16px
+@spacing-4: 6; // 24px
+@spacing-5: 8; // 32px
+@spacing-6: 10; // 40px
+@spacing-7: 12; // 48px
+@spacing-8: 24; // 96px
 @spacing-9: 48; // 192px
 @spacing-10: 64; // 256px
 @spacing-11: 80; // 320px
