--- a/Themes/new/Styles/theme.less
+++ b/Themes/new/Styles/theme.less
@@ -88,7 +88,7 @@ html {
   }
 
   a:hover,
-  a:focus { 
+  a:focus {
     color: white;
   }
 }
@@ -152,16 +152,15 @@ section {
 }
 
 .clickable {
-  transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 .clickable:hover {
-  opacity: .9;
+  opacity: 0.9;
 }
 
 footer a:hover {
   color: @white;
 }
-
 
 @media @sm {
   section {
