changes for new locations pages

--- a/Themes/new/Styles/_borders.less
+++ b/Themes/new/Styles/_borders.less
@@ -12,6 +12,9 @@
 .border-2 {
   border-width: 2px;
 }
+.border-3 {
+  border-width: 3px;
+}
 .border-4 {
   border-width: 4px;
 }
@@ -28,6 +31,10 @@
 .border-x-2 {
   border-left-width: 2px;
   border-right-width: 2px;
+}
+.border-x-3 {
+  border-left-width: 3px;
+  border-right-width: 3px;
 }
 .border-x-4 {
   border-left-width: 4px;
@@ -49,6 +56,10 @@
   border-top-width: 2px;
   border-bottom-width: 2px;
 }
+.border-y-3 {
+  border-top-width: 3px;
+  border-bottom-width: 3px;
+}
 .border-y-4 {
   border-top-width: 4px;
   border-bottom-width: 4px;
@@ -67,6 +78,9 @@
 .border-t-2 {
   border-top-width: 2px;
 }
+.border-t-3 {
+  border-top-width: 3px;
+}
 .border-t-4 {
   border-top-width: 4px;
 }
@@ -81,6 +95,9 @@
 }
 .border-r-2 {
   border-right-width: 2px;
+}
+.border-r-3 {
+  border-right-width: 3px;
 }
 .border-r-4 {
   border-right-width: 4px;
@@ -97,6 +114,9 @@
 .border-b-2 {
   border-bottom-width: 2px;
 }
+.border-b-3 {
+  border-bottom-width: 3px;
+}
 .border-b-4 {
   border-bottom-width: 4px;
 }
@@ -112,6 +132,9 @@
 .border-l-2 {
   border-left-width: 2px;
 }
+.border-l-3 {
+  border-left-width: 3px;
+}
 .border-l-4 {
   border-left-width: 4px;
 }
@@ -121,7 +144,9 @@
 .border-l {
   border-left-width: 1px;
 }
-
+.border-white {
+  border-color: @white;
+}
 .border-gray-lighter {
   border-color: @gray-lighter;
 }
