--- a/Themes/new/Styles/_variable-overrides.less
+++ b/Themes/new/Styles/_variable-overrides.less
@@ -55,7 +55,7 @@
 //--
 @gray-darker: #1c1c1c; // #color
 @gray-dark: #303030; // #color
-@gray: #b4b4b4; // #color
+@gray: #a4a4a4; // #color
 @gray-light: #ccc; // #color
 @gray-lighter: #efefef; // #color
 
