--- a/Themes/new/Styles/theme.less
+++ b/Themes/new/Styles/theme.less
@@ -97,8 +97,13 @@ html {
   padding: 0 !important;
 }
 
+.card {
+  flex-direction: inherit;
+  font-size: @font-size-base - 2;
+}
+
 section {
-  padding: @spacer*24 @spacer*8;
+  padding: @spacer*20 @spacer*8;
 }
 
 .fullscreen {
@@ -171,8 +176,8 @@ footer a:hover {
 
 @media @md {
   section {
-    padding-top: @spacer*40;
-    padding-bottom: @spacer*40;
+    padding-top: @spacer*36;
+    padding-bottom: @spacer*36;
   }
 
   .background-md-center {
