--- a/Themes/new/Styles/utilities/_spacing.less
+++ b/Themes/new/Styles/utilities/_spacing.less
@@ -41,6 +41,10 @@
     margin: @spacer * @spacing-12 !important;
   }
 
+  .mx-neg@{infix}-3 {
+    margin-left: -@spacer * @spacing-3 !important;
+    margin-right: -@spacer * @spacing-3 !important;
+  }
   .mx@{infix}-6 {
     margin-right: @spacer * @spacing-6 !important;
     margin-left: @spacer * @spacing-6 !important;
@@ -68,6 +72,10 @@
   .mx@{infix}-12 {
     margin-right: @spacer * @spacing-12 !important;
     margin-left: @spacer * @spacing-12 !important;
+  }
+  .mx@{infix}-0 {
+    margin-right: 0 !important;
+    margin-left: 0 !important;
   }
 
   .my@{infix}-6 {
@@ -186,7 +194,6 @@
   .ml@{infix}-12 {
     margin-left: @spacer * @spacing-12 !important;
   }
-
 }
 
 .padding-breakpoints(@infix) {
