--- a/Themes/new/Styles/_typography.less
+++ b/Themes/new/Styles/_typography.less
@@ -13,6 +13,10 @@ h6,
   font-weight: 700;
   margin-top: 0;
   font-family: @font-family-headings;
+
+  a {
+    color: inherit;
+  }
 }
 
 .display-1,
@@ -124,6 +128,11 @@ blockquote {
   letter-spacing: -0.5px;
   font-style: italic;
   color: @gray;
+}
+
+.label {
+  font-size: ceil(@font-size-base * 0.65);
+  letter-spacing: -0.5px;
 }
 
 small {
