--- a/Themes/new/Styles/theme.css
+++ b/Themes/new/Styles/theme.css
@@ -18187,7 +18187,7 @@ button.swiper-pagination-bullet {
   position: relative;
 }
 .timeline .timeline--item > div:before {
-  content: '';
+  content: "";
   position: absolute;
   top: 50%;
   left: 0;
@@ -18196,12 +18196,15 @@ button.swiper-pagination-bullet {
   width: 20px;
   height: 20px;
   border-radius: 1000px;
-  background-color: var(--gray-darker);
+  background-color: #fff;
   border: 4px solid var(--gray-light);
   z-index: 1;
 }
+.bg-gray-darker .timeline .timeline--item > div:before {
+  background-color: var(--gray-darker);
+}
 .timeline .timeline--item > div:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0%;
   left: 0;
@@ -18221,13 +18224,13 @@ button.swiper-pagination-bullet {
   .timeline .timeline--item i {
     font-size: 3em;
   }
-  .timeline .timeline--item:nth-child(2n+1) > div:before {
+  .timeline .timeline--item:nth-child(2n + 1) > div:before {
     left: auto;
     right: 0;
     margin-left: 0;
     margin-right: -10px;
   }
-  .timeline .timeline--item:nth-child(2n+1) > div:after {
+  .timeline .timeline--item:nth-child(2n + 1) > div:after {
     left: auto;
     right: 0;
     margin-left: 0;
