--- a/Themes/new/Styles/theme.less
+++ b/Themes/new/Styles/theme.less
@@ -167,6 +167,10 @@ footer a:hover {
   color: @white;
 }
 
+.wistia_popover_overlay {
+  background-color: rgba(0, 0, 0, 0.85) !important;
+}
+
 @media @sm {
   section {
     padding-left: @spacer*24;
