--- a/Themes/new/Styles/theme.css
+++ b/Themes/new/Styles/theme.css
@@ -16698,6 +16698,7 @@ h5 a,
 h6 a,
 .h6 a {
   color: inherit;
+  text-decoration: none;
 }
 .display-1,
 .display-2,
@@ -16738,15 +16739,15 @@ h1,
 }
 h2,
 .h2 {
-  letter-spacing: -1.45px;
+  letter-spacing: -1.8px;
 }
 h3,
 .h3 {
-  letter-spacing: -1.4px;
+  letter-spacing: -1.6px;
 }
 h4,
 .h4 {
-  letter-spacing: -1.1px;
+  letter-spacing: -1.6px;
 }
 h5,
 .h5 {
@@ -16782,7 +16783,7 @@ blockquote {
   border: none;
   font-style: italic;
   font-weight: 900;
-  letter-spacing: -0.8px;
+  letter-spacing: -0.5px;
   line-height: 1.08;
   font-size: 32px;
 }
@@ -16791,10 +16792,29 @@ blockquote footer {
   letter-spacing: 0;
   font-weight: 500;
 }
+.prose blockquote {
+  position: relative;
+  font-family: "colfax-web", sans-serif;
+  font-style: normal;
+  letter-spacing: -1px;
+  margin: 64px 0;
+  color: black;
+}
+.prose blockquote:after {
+  content: '';
+  position: absolute;
+  top: 5%;
+  left: -5%;
+  width: 110%;
+  height: 90%;
+  background-color: #fff14f;
+  z-index: -1;
+  transform: rotate(-1deg);
+}
 .lead {
   font-size: 24px;
   line-height: 1.32;
-  letter-spacing: -0.5px;
+  letter-spacing: -0.3px;
   font-style: italic;
   color: #a4a4a4;
 }
@@ -16803,7 +16823,7 @@ blockquote footer {
   letter-spacing: -0.5px;
 }
 small {
-  font-size: 75%;
+  font-size: 90%;
 }
 .no-wrap {
   white-space: nowrap;
@@ -16883,6 +16903,9 @@ a {
 .text-decoration-none a {
   text-decoration: none;
 }
+.whitespace-nowrap {
+  white-space: nowrap;
+}
 @media (min-width: 576px) {
   .display-1 {
     font-size: 76px;
@@ -16928,6 +16951,24 @@ a {
   }
 }
 @media (min-width: 768px) {
+  .prose {
+    font-size: 110%;
+  }
+  .prose h1,
+  .prose h2,
+  .prose h3,
+  .prose h4,
+  .prose h5,
+  .prose h6,
+  .prose ul,
+  .prose ol,
+  .prose p,
+  .prose blockquote {
+    margin-bottom: 36px;
+  }
+  small {
+    font-size: 95%;
+  }
   .display-1 {
     font-size: 92px;
     letter-spacing: -3px;
@@ -16937,7 +16978,7 @@ a {
     letter-spacing: -2.7px;
   }
   .display-3 {
-    font-size: 68px;
+    font-size: 72px;
     letter-spacing: -2px;
   }
   h1,
@@ -16948,17 +16989,17 @@ a {
   h2,
   .h2 {
     font-size: 52px;
-    letter-spacing: -2.4px;
+    letter-spacing: -2.6px;
   }
   h3,
   .h3 {
     font-size: 44px;
-    letter-spacing: -2.4px;
+    letter-spacing: -2.6px;
   }
   h4,
   .h4 {
     font-size: 40px;
-    letter-spacing: -1.8px;
+    letter-spacing: -2.2px;
   }
   h5,
   .h5 {
@@ -16977,7 +17018,7 @@ a {
   blockquote {
     font-size: 36px;
     line-height: 1.16;
-    letter-spacing: -1.1px;
+    letter-spacing: -0.5px;
   }
   .lead {
     font-size: 28px;
@@ -22435,7 +22476,7 @@ html {
   font-size: 18px;
 }
 section {
-  padding: 96px 32px;
+  padding: 80px 32px;
 }
 .fullscreen {
   position: absolute;
