--- a/Themes/new/Styles/christmas.css
+++ b/Themes/new/Styles/christmas.css
@@ -1,62 +1,66 @@
+@font-face {
+  font-family: "AwesomeSerif";
+  src: local("AwesomeSerif"), url("/Themes/new/Assets/Fonts/AwesomeSerifItalic-BdRegular.otf") format("opentype");
+}
 .christmas-at-newspring .bg-forrest {
-  background-color: #102316;
+  background-color: #102316 !important;
 }
 .christmas-at-newspring .bg-alpine {
-  background-color: #033527;
+  background-color: #033527 !important;
 }
 .christmas-at-newspring .bg-aged-wine {
-  background-color: #53170a;
+  background-color: #53170a !important;
 }
 .christmas-at-newspring .bg-aged-gold {
-  background-color: #9b7b35;
+  background-color: #9b7b35 !important;
 }
 .christmas-at-newspring .bg-camel {
-  background-color: #b18654;
+  background-color: #b18654 !important;
 }
 .christmas-at-newspring .bg-ice-skating {
-  background-color: #dce2d5;
+  background-color: #dce2d5 !important;
 }
 .christmas-at-newspring .bg-cashmere {
-  background-color: #e1dcd4;
+  background-color: #e1dcd4 !important;
 }
 .christmas-at-newspring .bg-red-wine {
-  background-color: #710e02;
+  background-color: #710e02 !important;
 }
 .christmas-at-newspring .bg-meringue {
-  background-color: #f2ede9;
+  background-color: #f2ede9 !important;
 }
 .christmas-at-newspring .bg-trench-coat {
-  background-color: #ceb788;
+  background-color: #CAA06E !important;
 }
 .christmas-at-newspring .text-forrest {
-  color: #102316;
+  color: #102316 !important;
 }
 .christmas-at-newspring .text-alpine {
-  color: #033527;
+  color: #033527 !important;
 }
 .christmas-at-newspring .text-aged-wine {
-  color: #53170a;
+  color: #53170a !important;
 }
 .christmas-at-newspring .text-aged-gold {
-  color: #9b7b35;
+  color: #9b7b35 !important;
 }
 .christmas-at-newspring .text-camel {
-  color: #b18654;
+  color: #b18654 !important;
 }
 .christmas-at-newspring .text-ice-skating {
-  color: #dce2d5;
+  color: #dce2d5 !important;
 }
 .christmas-at-newspring .text-cashmere {
-  color: #e1dcd4;
+  color: #e1dcd4 !important;
 }
 .christmas-at-newspring .text-red-wine {
-  color: #710e02;
+  color: #710e02 !important;
 }
 .christmas-at-newspring .text-meringue {
-  color: #f2ede9;
+  color: #f2ede9 !important;
 }
 .christmas-at-newspring .text-trench-coat {
-  color: #ceb788;
+  color: #CAA06E !important;
 }
 .christmas-at-newspring .fill-forrest {
   fill: #102316;
@@ -86,15 +90,15 @@
   fill: #f2ede9;
 }
 .christmas-at-newspring .fill-trench-coat {
-  fill: #ceb788;
+  fill: #CAA06E;
 }
 .christmas-at-newspring .btn-primary {
-  background-color: #9b7b35;
+  background-color: #b18654;
 }
 .christmas-at-newspring .btn-primary:hover,
 .christmas-at-newspring .btn-primary:active,
 .christmas-at-newspring .btn-primary:focus {
-  background-color: #755d28;
+  background-color: #906c42;
 }
 .christmas-at-newspring .btn-secondary {
   background-color: #710e02;
@@ -104,9 +108,18 @@
 .christmas-at-newspring .btn-secondary:focus {
   background-color: #3f0801;
 }
-@font-face {
-  font-family: "AwesomeSerif";
-  src: local("AwesomeSerif"), url("/Themes/new/Assets/Fonts/AwesomeSerifItalic-BdRegular.otf") format("opentype");
+.christmas-at-newspring a:not(.btn) {
+  color: #CAA06E;
+}
+.christmas-at-newspring a:not(.btn):hover,
+.christmas-at-newspring a:not(.btn):active,
+.christmas-at-newspring a:not(.btn):focus {
+  color: #bc8849;
+}
+.christmas-at-newspring .display-1,
+.christmas-at-newspring .display-2,
+.christmas-at-newspring .display-3 {
+  letter-spacing: 1px;
 }
 .christmas-at-newspring h1,
 .christmas-at-newspring h2,
@@ -115,5 +128,6 @@
 .christmas-at-newspring h5,
 .christmas-at-newspring h6 {
   font-family: "AwesomeSerif", sans-serif;
-  letter-spacing: 1px !important;
+  font-weight: normal;
+  letter-spacing: 0.5px;
 }
